<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:paddingTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/address_picker_description"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"/>

    <EditText
        android:paddingTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/address_picker"
        android:hint="@string/server_address"
        />

    <TextView
        android:paddingTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/port_picker_description"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"/>


    <EditText
        android:paddingTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/port_picker"
        android:hint="@string/server_port"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_save_button_text"
        android:onClick="onSaveClick"/>

</LinearLayout>
